--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
     <ul class="head__list">
       <li class="head__item">
         <a href="#" class="head__link">
-          <svg class="whitepeper-svg">
+          <svg class="whitepeper-svg" id="menuBurger">
             <use href="../img/header.svg#menu"></use>
           </svg>
         </a>
