--- a/src/page-index/page.scss
+++ b/src/page-index/page.scss
@@ -67,7 +67,7 @@ body {
     justify-content: space-evenly;
     flex-flow: row wrap;
     height: auto;
-    
+    background-color: #red;
     margin: 0 auto;
   }
   .galary{
