--- a/src/page-index/page.scss
+++ b/src/page-index/page.scss
@@ -3,11 +3,11 @@ body {
   padding: 0;
   background-color: #fff;
 }
-.container{
+.container {
   max-width: 1024px;
   margin: 0 auto;
 }
-.galary{
+.galary {
   padding: 0px;
   padding-top: 10px;
   width: 360px;
@@ -17,86 +17,84 @@ body {
   margin: 0 auto;
   list-style: none;
 }
-.movie-logo{
+.movie-logo {
   width: 346px;
   height: 177px;
 }
-.movie-title{
+.movie-title {
   margin: 0;
   font-size: 18px;
   color: #fff;
   position: absolute;
   top: 77%;
-  left: 8%
+  left: 8%;
 }
-.svg-bell{
+.svg-bell {
   position: absolute;
   top: 15%;
   left: 88%;
   width: 15px;
   height: 18px;
-  fill:#fff;
-  &:hover{
+  fill: #fff;
+  &:hover {
     width: 20px;
     height: 19px;
   }
 }
-.svg-star{
+.svg-star {
   position: absolute;
   top: 15%;
   left: 79%;
   width: 17px;
   height: 17px;
-  fill:#fff;
-  &:hover{
+  fill: #fff;
+  &:hover {
     width: 23px;
     height: 20px;
   }
 }
 
-.movie{
+.movie {
   position: relative;
   margin: 0;
   padding: 0 6px;
   margin-bottom: 10px;
 }
-@media (min-width:767px){
-  .galary{
+@media (min-width: 767px) {
+  .galary {
     width: 750px;
     display: flex;
     justify-content: space-evenly;
     flex-flow: row wrap;
     height: auto;
-    background-color: #red;
     margin: 0 auto;
   }
-  .galary{
+  .galary {
     padding-top: 20px;
   }
-  .movie{
+  .movie {
     margin-bottom: 15px;
   }
-  .movie-title{
+  .movie-title {
     top: 82%;
     left: 4%;
   }
-  .movie-logo{
+  .movie-logo {
     width: 353px;
     height: 177px;
   }
 }
 
-@media (min-width:1023px){
-.galary{
-  width: 1000px;
-}
-  .movie-logo{
+@media (min-width: 1023px) {
+  .galary {
+    width: 1000px;
+  }
+  .movie-logo {
     width: 481px;
     height: 248px;
   }
-  .movie-title{
+  .movie-title {
     top: 88%;
     left: 4%;
   }
-
 }
