--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,5 +1,5 @@
 <nav class="nav__film">
-    <a class="nav__main" href="#">FILM</a>
-    <a class="nav__main" href="#">TV SHOW</a>
-    <a class="nav__main" href="#">FAVORITES</a>
+  <a class="nav__main" data-type="movie" href="#">FILM</a>
+  <a class="nav__main" data-type="tv" href="#">TV SHOW</a>
+  <a class="nav__main" href="#">FAVORITES</a>
 </nav>
