--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,11 +14,29 @@
         </a>
       </li>
     </ul>
-    
+
     <a class="head__search" href="#">
       <svg class="whitepeper-svg">
         <use href="../img/symbol-defs.svg#icon-search"></use>
       </svg>
+      <div class="lightbox">
+        <div class="lightbox_iteam">
+          <p class="lightbox_iteam_text">Mooogle</p>
+        </div>
+        <div class="lightbox_iteam_btn">
+          <input
+            class="lightbox_iteam_btn_submit"
+            type="submit"
+            value=" "
+          />
+          <input
+            class="lightbox_iteam_btn_search"
+            type="text"
+            placeholder="Search"
+          />
+        </div>
+      </div>
+      <div class="lightbox_shadow"></div>
     </a>
   </nav>
 </header>
