add style to main gallary -------borisenko----

--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
 <li class="movie">
-  <img src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" alt="movie-title">
+  <img class="movie-logo" src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" alt="movie-title">
   <p class="movie-title">{{title}}{{release_date}}</p>
   <svg class="svg-bell">
     <use href="../img/sprite.svg#bell"></use>
