--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -17,4 +17,19 @@
   line-height: 12px;
   letter-spacing: 0.14px;
   font-size: 14px;
+  &:hover {
+    cursor: pointer;
+    &::after{
+      // opacity: 1;
+
+    }
+  }
+  &::after{
+    content: '';
+    display: block;
+    width: 50px;
+    height: 2px;
+    color: black;
+    margin-top: 10px;
+  }
 }
