--- a/src/page-index/page.scss
+++ b/src/page-index/page.scss
@@ -46,11 +46,11 @@ body {
 }
 .movie-title{
   margin: 0;
-  font-size: 18px;
+  font-size: 16px;
   color: #fff;
   position: absolute;
-  top: 77%;
-  left: 8%;
+  top: 79%;
+  left: 4%;
 }
 .svg-bell {
   position: absolute;
@@ -163,4 +163,5 @@ body {
 
   // }
 
+}
 }
