--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
     <ul class="head__list">
       <li class="head__item">
         <a href="#" class="head__link">
-          <svg class="whitepeper-svg" id="menuBurger">
+          <svg class="whitepeper-svg" >
             <use href="../img/header.svg#menu"></use>
           </svg>
         </a>
@@ -15,32 +15,33 @@
       </li>
     </ul>
     <form action="search" id="searchForm">
-        <input type="text" id="searchInput" name="search" placeholder="Search" />
 
-      </form>
+    </form>
     <a class="head__search" href="#">
-      <svg class="whitepeper-svg">
+      <svg class="search-svg">
         <use href="../img/symbol-defs.svg#icon-search"></use>
       </svg>
       <div class="lightbox">
         <div class="lightbox_iteam">
           <p class="lightbox_iteam_text">Mooogle</p>
         </div>
-        <div class="lightbox_iteam_btn">
-          <input
+          <div class="lightbox_iteam_btn">
+            <input
             class="lightbox_iteam_btn_submit"
             type="submit"
             value=" "
-          />
-          <input
+            />
+            <input
             class="lightbox_iteam_btn_search"
             type="text"
             placeholder="Search"
-          />
+            />
+          </div>
         </div>
-      </div>
-      <!-- <div class="lightbox_shadow"></div> -->
-    </a>
+        <div class="lightbox_shadow"></div>
+        <span class="span__text">Search</span>
+      </a>
+      <!-- <input type="text" id="searchInput" name="search" placeholder="Search" /> -->
   </nav>
 </header>
 
