--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -39,6 +39,33 @@ a {
     width: 25px;
     height: 17px;
 }
+.search-svg{
+  position: absolute;
+  right: 10px;
+  width: 25px;
+  height: 17px;
+}
+.span__text{
+visibility: hidden;
+}
+.span__text::after{
+visibility: hidden;
+}
+// .burger__menu{
+//   display: block;
+//   position: absolute;
+//   z-index: 1;
+//   width: 300px;
+//   height: 100%;
+//   background-color: #fff;
+// }
+// .burger__list{
+//   display: block;
+//   width: 100px;
+//   height: 100px;
+//   background-color: black;
+// }
+
 
 
 @media (min-width: 768px){
@@ -46,12 +73,63 @@ a {
         // width: 22%;
         // justify-content: space-between;
     }
-
+    .whitepeper-svg{
+      visibility: hidden;
+    }
+    .search-svg{
+      position: absolute;
+      right: 145px;
+      width: 25px;
+      height: 17px;
+    }
+    .span__text{
+      visibility: visible;
+      display: block;
+      width: 130px;
+      padding-right: 40px;
+      font-size: 17px;
+      color: black;
+    }
+    .span__text::after{
+        visibility: visible;
+      content: "";
+      display: block;
+      width: 130px;
+      height: 1px;
+      background-color: black;
+      margin-top: 4px;
+    }
 
 }
 @media (min-width: 960px){
     .head__list{
         // width: 15%;
+    }
+    .whitepeper-svg{
+      visibility: hidden;
+    }
+    .search-svg{
+      position: absolute;
+      right: 145px;
+      width: 25px;
+      height: 17px;
+    }
+    .span__text{
+      visibility: visible;
+      display: block;
+      width: 130px;
+      padding-right: 40px;
+      font-size: 17px;
+      color: black;
+    }
+    .span__text::after{
+      visibility: visible;
+      content: "";
+      display: block;
+      width: 130px;
+      height: 1px;
+      background-color: black;
+      margin-top: 4px;
     }
 }
 
