--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -10,26 +10,28 @@
 }
 
 .nav__main {
-  width: 65px;
-  height: 12px;
-  color: #372c48;
-  font-weight: 500;
-  line-height: 12px;
-  letter-spacing: 0.14px;
-  font-size: 14px;
-  &:hover {
-    cursor: pointer;
-    &::after{
-      // opacity: 1;
-
-    }
-  }
-  &::after{
-    content: '';
-    display: block;
-    width: 50px;
-    height: 2px;
-    color: black;
-    margin-top: 10px;
-  }
+width: 100px;
+height: 12px;
+text-align: center;
+color: #372c48;
+font-weight: 500;
+line-height: 12px;
+letter-spacing: 0.14px;
+font-size: 14px;
+&:hover {
+cursor: pointer;
+&::after{
+opacity: 1;
+ }
+}
+&::after{
+content: '';
+display: block;
+width: 100%;
+height: 2px;
+text-align: center;
+background-color:#6f677b;
+margin-top: 17px;
+opacity: 0;
+ }
 }
