--- a/src/page-index/page.scss
+++ b/src/page-index/page.scss
@@ -2,12 +2,13 @@ body {
   margin: 0;
   padding: 0;
   background-color: #fff;
-}
-.container {
+ }
+ .container {
   max-width: 1024px;
   margin: 0 auto;
-}
-.gallery{
+  position: relative;
+ }
+ .gallery{
   width: 360px;
   padding: 0px;
   padding-top: 10px;
@@ -16,18 +17,18 @@ body {
   height: auto;
   margin: 0 auto;
   list-style: none;
-}
-.movie{
+ }
+ .movie{
   position: relative;
   margin: 0;
   padding: 0 6px;
   margin-bottom: 10px;
-}
-.movie-logo{
+ }
+ .movie-logo{
   width: 346px;
   height: 177px;
-}
-.movie::before{
+ }
+ .movie::before{
   content: "";
   background-image: url('../img/shadow.png');
   display: block;
@@ -36,48 +37,49 @@ body {
   position: absolute;
   left: 50%; top: 50%;
   transform: translate(-50% , -50%);
-}
-.movie:hover img {
+ }
+ .movie:hover img {
   top: -4px;
   left: -4px;
   position: relative;
   top: 0;
   left: 0;
-}
-.movie-title{
+ }
+ .movie-title{
   margin: 0;
   font-size: 18px;
   color: #fff;
   position: absolute;
   top: 77%;
   left: 8%;
-}
-.svg-bell {
+ }
+ .svg-bell {
   position: absolute;
   top: 15%;
   left: 88%;
   width: 15px;
   height: 18px;
   fill: #fff;
+  cursor: pointer;
   &:hover {
     width: 20px;
     height: 19px;
   }
-}
-.svg-star {
+ }
+ .svg-star {
   position: absolute;
   top: 15%;
   left: 79%;
   width: 17px;
   height: 17px;
   fill: #fff;
+  cursor: pointer;
   &:hover {
     width: 23px;
     height: 20px;
   }
-}
-
-@media (min-width:767px){
+ }
+ @media (min-width:767px){
   .gallery{
     width: 750px;
     display: flex;
@@ -123,12 +125,11 @@ body {
     top: 78%;
     left: 4%;
   }
-}
-
-@media (min-width:1023px){
-.gallery{
+ }
+ @media (min-width:1023px){
+ .gallery{
   width: 1000px;
-}
+ }
   .movie-logo{
     width: 481px;
     height: 248px;
@@ -160,7 +161,6 @@ body {
   //   width: 500px;
   //   height: 800px;
   //   background-color: black;
-
   // }
-
-}
+ }
+ }
