--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -3,7 +3,7 @@
   <img class="movie-logo" src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" alt="movie-title">
   <p class="movie-title">{{title}}{{release_date}}</p>
   <svg class="svg-bell">
-    <use href="../img/sprite.svg#bell"></use>
+    <use class="subscription_Bell" href="../img/sprite.svg#bell"></use>
   </svg>
   <svg class="svg-star">
     <use href="../img/sprite.svg#star-full"></use>
