--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -39,7 +39,7 @@
           />
         </div>
       </div>
-      <!-- <div class="lightbox_shadow"></div> -->
+      <div class="lightbox_shadow"></div>
     </a>
   </nav>
 </header>
