--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -110,8 +110,8 @@ a {
 
 .lightbox_shadow_is_open {
   background-color: rgba(0, 0, 0, 0.5);
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   position: fixed;
   z-index: 2;
   top: 0px;
@@ -169,7 +169,7 @@ a {
 
 .lightbox_iteam_btn_search {
   border: 0;
-  border-bottom: 3px solid white;
+  border-bottom: 2px solid white;
   background-color: #77c1bb;
   color: white;
   padding-left: 45px;
