add value to option for select

--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -13,6 +13,6 @@
   <select name="date" id="sorDate">By date
     <option value="" hidden disabled selected>Sort By Date</option>
     <option value="release_date">New</option>
-    <option value="">Latest</option>
+    <option value="release_date">Latest</option>
   </select>
 </section>
