subscription and footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,33 @@
 <span class="spacer"></span>
 <span class="spacer"></span>
-<footer>
-  <ul>
+<footer class="footer">
+  <ul class="footer_socialIcons">
     <li>
-      <a href="">Blog post</a>
+      <a href="https://www.facebook.com/"
+        ><img class="footer_socialIcons_item" src="../img/footer_icon/facebook-logo-button.svg" alt="facebook"></a>
     </li>
     <li>
-      <a href="">Github repository</a>
+      <a href="https://www.youtube.com/"
+        ><img class="footer_socialIcons_item" src="../img/footer_icon/play-button-silhouette.svg" alt="youtube"></a>
+    </li>
+    <li>
+      <a href="https://twitter.com/"
+        ><img class="footer_socialIcons_item" src="../img/footer_icon//twitter.svg" alt="twitter"></a>
+    </li>
+    <li>
+      <a href="https://www.instagram.com/"
+        ><img class="footer_socialIcons_item" src="../img/footer_icon/social-instagram-circle.svg" alt="instagram"></a>
+    </li>
+  </ul>
+  <ul class="footer_menu">
+    <li>
+      <a class="footer_menu_text" href="#">Главная</a>
+    </li>
+    <li>
+      <a class="footer_menu_text" href="#">Котакти</a>
+    </li>
+    <li>
+      <a class="footer_menu_text" href="#">Правообладателям</a>
     </li>
   </ul>
 </footer>
