add sort buttom

--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -5,14 +5,14 @@
 </nav>
 <section class="sort">
   <h2>Category</h2>
-  <select name="sortName" id="sortName">Sort By Name
+  <select name="sortName" id="sortName">
     <option value="" hidden disabled selected>Sort By Name</option>
     <option value="title">By Name</option>
     <option value="popularity">Popularity</option>
   </select>
-  <select name="date" id="sorDate">By date
+  <select name="sortDate" id="sortDate">
     <option value="" hidden disabled selected>Sort By Date</option>
-    <option value="release_date">New</option>
-    <option value="release_date">Latest</option>
+    <option value="release_date">Latest Film</option>
+    <option value="release_dateOld">New Film</option>
   </select>
 </section>
