add burger menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,13 @@
 <header class="head">
   <nav class="head__nav">
     <ul class="head__list">
-      <li class="head__item">
+      <button class="head__item burger__button">
         <a href="#" class="head__link">
           <svg class="whitepeper-svg">
             <use href="../img/header.svg#menu"></use>
           </svg>
         </a>
-      </li>
+      </button>
       <li class="head__item">
         <a href="#" class="head__link-logo">
           <img class="head__logo-img" src="../img/2-layers.png" alt="" />
