--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -2,4 +2,25 @@
   <ul class="gallery">
 
     </ul>
+    <div class="burger__menu">
+      <li class="burger__list">
+          <svg class="burger__svg">
+              <use href="../img/sprite-burger.svg#film"></use>
+            </svg>
+          <span class="burger__span"> Фильмы</span>
+      </li>
+      <li class="burger__list">
+          <svg class="burger__svg">
+              <use href="../img/sprite-burger.svg#video-camera"></use>
+            </svg>
+          <span class="burger__span"> Сериалы</span>
+      </li>
+      <li class="burger__list">
+          <svg class="burger__svg">
+              <use href="../img/sprite-burger.svg#star-full"></use>
+            </svg>
+          <span class="burger__span">Избраное </span>
+      </li>
+    </div>
+    <div class="shadow__box"></div>
 </div>
