--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -51,22 +51,6 @@ visibility: hidden;
 .span__text::after{
 visibility: hidden;
 }
-// .burger__menu{
-//   display: block;
-//   position: absolute;
-//   z-index: 1;
-//   width: 300px;
-//   height: 100%;
-//   background-color: #fff;
-// }
-// .burger__list{
-//   display: block;
-//   width: 100px;
-//   height: 100px;
-//   background-color: black;
-// }
-
-
 
 @media (min-width: 768px){
     .head__list{
@@ -74,7 +58,7 @@ visibility: hidden;
         // justify-content: space-between;
     }
     .whitepeper-svg{
-      visibility: hidden;
+      display: none;;
     }
     .search-svg{
       position: absolute;
@@ -99,7 +83,6 @@ visibility: hidden;
       background-color: black;
       margin-top: 4px;
     }
-
 }
 @media (min-width: 960px){
     .head__list{
@@ -145,7 +128,6 @@ visibility: hidden;
   width: 100vw;
   height: 449px;
   position: fixed;
-
   left: 0;
   top: 0;
   padding: 0;
