add function links burger menu

--- a/src/page-index/page.scss
+++ b/src/page-index/page.scss
@@ -12,7 +12,7 @@ body {
 .gallery {
   width: 360px;
   padding: 0px;
-  padding-top: 10px;
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
   height: auto;
@@ -230,6 +230,11 @@ body {
       top: 50%;
       transform: translate(-50%, -50%);
     }
+    .movie-title {
+      top: 88%;
+      left: 4%;
+    }
+
 
 }
 
