--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -3,19 +3,19 @@
 
     </ul>
     <div class="burger__menu">
-      <li class="burger__list">
+      <li class="burger__list burger__search__films">
           <svg class="burger__svg">
               <use href="../img/sprite-burger.svg#film"></use>
             </svg>
           <span class="burger__span"> Фильмы</span>
       </li>
-      <li class="burger__list">
+      <li class="burger__list burger__search__serials">
           <svg class="burger__svg">
               <use href="../img/sprite-burger.svg#video-camera"></use>
             </svg>
           <span class="burger__span"> Сериалы</span>
       </li>
-      <li class="burger__list">
+      <li class="burger__list burger__search__favorites">
           <svg class="burger__svg">
               <use href="../img/sprite-burger.svg#star-full"></use>
             </svg>
@@ -57,8 +57,8 @@
     <div class="subscription_thenks">
       <h2 class="subscription_thenks_headline">Спасибо!</h2>
       <p class="subscription_thenks_text">
-        Теперь ви будете получать увидомление об изминениях в "фильме". Ви
-        всегда сможите отписаться перейдя по ссилке в письме.
+        Теперь вы будете получать уведомление об изменениях в "фильме". Вы
+        всегда сможете отписаться перейдя по ссылке в письме.
       </p>
       <input class="subscription_thenks_btn" type="submit" value="Ok" />
     </div>
