--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -57,9 +57,19 @@ visibility: hidden;
 .span__text::after{
 visibility: hidden;
 }
-.sort {
+.sort__text{
+  padding: 0 ;
+  padding-left: 10px;
+  line-height: 0;
+  display: block;
+  font-size: 16px;
+  margin-right: 20px;
+}
+.sort  {
   display: flex;
   justify-content: space-around;
+  height: 25px;
+  padding-top: 20px;
 }
 
 @media (min-width: 768px){
@@ -93,8 +103,14 @@ visibility: hidden;
       background-color: black;
       margin-top: 4px;
     }
+    .sort  {
+      justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+    }
+
 }
-@media (min-width: 960px){
+@media (min-width: 1023px){
     .head__list{
         // width: 15%;
     }
