add sort function

--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -8,7 +8,7 @@
     {{name }} {{first_air_date}}
   {{/if}}
     </p>
-  <svg class="svg-bell">
+  <svg class="svg-bell" data-bell="bell">
     <use class="subscription_Bell" href="../img/sprite.svg#bell"></use>
   </svg>
   <svg class="svg-star">
