--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,45 +1,47 @@
 <div class="container">
-  <ul class="gallery">
 
-    <div class="subscription" action="#">
-      <h2 class="subscription_headline">Подписаться на изминения</h2>
-      <form class="subscription_container">
-        <div class="subscription_container_box">
-          <input
-            class="subscription_container_box_item"
-            type="text"
-            placeholder="Name"
-            required
-          />
-          <input
-            class="subscription_container_box_item"
-            type="text"
-            placeholder="Email"
-            required
-          />
-          <input
-            class="subscription_container_box_item"
-            type="text"
-            placeholder="Phone"
-            required
-          />
-        </div>
+  <div class="subscription">
+    <h2 class="subscription_headline">Подписаться на изминения</h2>
+    <form class="subscription_container">
+      <div class="subscription_container_box">
         <input
-          class="subscription_container_box_item subscription_btn"
-          type="submit"
-          value="Submit"
+          class="subscription_container_box_item"
+          type="text"
+          placeholder="Name"
+          required
         />
-      </form>
-    </div>
+        <input
+          class="subscription_container_box_item"
+          type="text"
+          placeholder="Email"
+          required
+        />
+        <input
+          class="subscription_container_box_item"
+          type="text"
+          placeholder="Phone"
+          required
+        />
+      </div>
+      <input
+        class="subscription_container_box_item subscription_btn"
+        type="submit"
+        value="Submit"
+      />
+    </form>
+  </div>
 
-    <div class="subscription_thenks">
-      <h2 class="subscription_thenks_headline">Спасибо!</h2>
-      <p class="subscription_thenks_text">
-        Теперь ви будете получать увидомление об изминениях в "фильме". Ви
-        всегда сможите отписаться перейдя по ссилке в письме.
-      </p>
-      <input class="subscription_thenks_btn" type="submit" value="Ok" />
-    </div>
-    
+  <div class="subscription_thenks">
+    <h2 class="subscription_thenks_headline">Спасибо!</h2>
+    <p class="subscription_thenks_text">
+      Теперь ви будете получать увидомление об изминениях в "фильме". Ви
+      всегда сможите отписаться перейдя по ссилке в письме.
+    </p>
+    <input class="subscription_thenks_btn" type="submit" value="Ok" />
+  </div>
+
+  <ul class="gallery">
   </ul>
+
+  <a class="back_to_top" title="Наверх">&uarr;<i class="back_to_top_arrow"></i></a>
 </div>
