--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -20,10 +20,12 @@ letter-spacing: 0.14px;
 font-size: 14px;
 &:hover {
 cursor: pointer;
-&::after{
+
+&::after {
 opacity: 1;
  }
 }
+
 &::after{
 content: '';
 display: block;
@@ -34,4 +36,8 @@ background-color:#6f677b;
 margin-top: 17px;
 opacity: 0;
  }
+}
+
+.nav__main_is_open::after {
+  opacity: 1;
 }
