--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -4,24 +4,24 @@
             <svg class="burger__svg">
                 <use href="../img/sprite-burger.svg#film"></use>
               </svg>
-            <span class="burger__span"> Фильмы</span>
+            <span class="burger__span"> Movies</span>
         </li>
         <li class="burger__list burger__search__serials">
             <svg class="burger__svg">
                 <use href="../img/sprite-burger.svg#video-camera"></use>
               </svg>
-            <span class="burger__span"> Сериалы</span>
+            <span class="burger__span"> Tv series</span>
         </li>
         <li class="burger__list burger__search__favorites">
             <svg class="burger__svg">
                 <use href="../img/sprite-burger.svg#star-full"></use>
               </svg>
-            <span class="burger__span">Избраное </span>
+            <span class="burger__span">Favorite </span>
         </li>
       </div>
       <div class="shadow__box"></div>
   <div class="subscription">
-    <h2 class="subscription_headline">Подписаться на изминения</h2>
+    <h2 class="subscription_headline">Subscripe</h2>
     <form class="subscription_container">
       <div class="subscription_container_box">
         <input
@@ -52,10 +52,10 @@
   </div>
 
   <div class="subscription_thenks">
-    <h2 class="subscription_thenks_headline">Спасибо!</h2>
+    <h2 class="subscription_thenks_headline">Thank you!</h2>
     <p class="subscription_thenks_text">
-        Теперь вы будете получать уведомление об изменениях в "фильме". Вы
-        всегда сможете отписаться перейдя по ссылке в письме.
+        Now you will be notified of changes to the movie.
+        You can always unsubscribe by clicking on the link in the letter.
     </p>
     <input class="subscription_thenks_btn" type="submit" value="Ok" />
   </div>
