--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,20 +1,20 @@
 <nav class="nav__film">
-  <a class="nav__main" data-type="movie" href="#">ФИЛЬМЫ</a>
-  <a class="nav__main" data-type="tv" href="#">СЕРИАЛЫ</a>
-  <a class="nav__main" data-type="favotite" href="#">ИЗБРАННОЕ</a>
+  <a class="nav__main" data-type="movie" href="#">MOVIES</a>
+  <a class="nav__main" data-type="tv" href="#">TV SERIES</a>
+  <a class="nav__main" data-type="favotite" href="#">FAVORITES</a>
 </nav>
-<section class="sort">
-  <h2 class="sort__text">Подкатегории</h2>
+<section class="sort container">
+  <h2 class="sort__text">Сategories</h2>
   <div class="sort__name">
   <select class="sort__name" name="sortName" id="sortName">
-    <option value="" hidden disabled selected>По имени</option>
-    <option value="title">По названию</option>
-    <option value="popularity">Популярное</option>
+    <option value="" hidden disabled selected>By name</option>
+    <option value="title">By title</option>
+    <option value="popularity">Popular</option>
   </select>
   <select name="sortDate" id="sortDate">
-    <option value="" hidden disabled selected>По дате</option>
-    <option value="release_date">Новинки</option>
-    <option value="release_dateOld">Премьеры</option>
+    <option value="" hidden disabled selected>By date</option>
+    <option value="release_date">New</option>
+    <option value="release_dateOld">Premieres</option>
   </select>
 </div>
 </section>
