--- a/src/page-index/page.scss
+++ b/src/page-index/page.scss
@@ -148,7 +148,7 @@ body {
   z-index: 1;
   width: 100%;
   height: 100%;
-  background-color: rgba(191, 191, 191, 0.1)
+  background-color: rgba(191, 191, 191, 0);
  }
 
 @media (min-width:767px) {
