--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -67,7 +67,8 @@ visibility: hidden;
 }
 .sort  {
   display: flex;
-  justify-content: space-around;
+  width: 360px;
+  justify-content: space-between;
   height: 25px;
   padding-top: 20px;
 }
@@ -104,9 +105,10 @@ visibility: hidden;
       margin-top: 4px;
     }
     .sort  {
-      justify-content: space-between;
-    padding-left: 20px;
-    padding-right: 20px;
+      width: 725px;
+    justify-content: space-between;
+    // padding-left: 20px;
+    // padding-right: 20px;
     }
 
 }
@@ -139,6 +141,11 @@ visibility: hidden;
       height: 1px;
       background-color: black;
       margin-top: 4px;
+    }
+    .sort  {
+      width: 980px;
+    justify-content: space-between;
+
     }
 }
 
