--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,31 +3,54 @@
 <footer class="footer">
   <ul class="footer_socialIcons">
     <li>
-      <a href="https://www.facebook.com/"
-        ><img class="footer_socialIcons_item" src="../img/footer_icon/facebook-logo-button.svg" alt="facebook"></a>
+      <a href="https://www.facebook.com/">
+        <svg class="footer_socialIcons_item">
+          <use
+            href="../img/footer_icon/sprite-footer.svg#facebook-logo-button"
+          ></use>
+        </svg>
+      </a>
     </li>
     <li>
-      <a href="https://www.youtube.com/"
-        ><img class="footer_socialIcons_item" src="../img/footer_icon/play-button-silhouette.svg" alt="youtube"></a>
+      <a href="https://www.youtube.com/">
+        <svg class="footer_socialIcons_item">
+          <use
+            href="../img/footer_icon/sprite-footer.svg#play-button-silhouette"
+          ></use>
+        </svg>
+      </a>
     </li>
     <li>
-      <a href="https://twitter.com/"
-        ><img class="footer_socialIcons_item" src="../img/footer_icon//twitter.svg" alt="twitter"></a>
+      <a href="https://twitter.com/">
+        <svg class="footer_socialIcons_item">
+          <use
+            href="../img/footer_icon/sprite-footer.svg#twitter"
+          ></use>
+        </svg>
+      </a>
     </li>
     <li>
-      <a href="https://www.instagram.com/"
-        ><img class="footer_socialIcons_item" src="../img/footer_icon/social-instagram-circle.svg" alt="instagram"></a>
+      <a href="https://www.instagram.com/">
+        <svg class="footer_socialIcons_item">
+          <use
+            href="../img/footer_icon/sprite-footer.svg#social-instagram-circle"
+          ></use>
+        </svg>
+      </a>
     </li>
   </ul>
   <ul class="footer_menu">
     <li>
-      <a class="footer_menu_text" href="#">Главная</a>
+      <a class="footer_menu_text" href="#">Home</a>
     </li>
     <li>
-      <a class="footer_menu_text" href="#">Котакти</a>
+      <a class="footer_menu_text" href="#">Films</a>
     </li>
     <li>
-      <a class="footer_menu_text" href="#">Правообладателям</a>
+        <a class="footer_menu_text" href="#">TV series</a>
+      </li>
+    <li>
+      <a class="footer_menu_text" href="#">Copyright holders</a>
     </li>
   </ul>
 </footer>
