--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -63,5 +63,5 @@
   <ul class="gallery">
   </ul>
 
-  <a class="back_to_top" title="Наверх">&uarr;<i class="back_to_top_arrow"></i></a>
+  <a class="back_to_top" title="Наверх"></a>
 </div>
