--- a/src/scss/upArrow.scss
+++ b/src/scss/upArrow.scss
@@ -3,47 +3,34 @@
   bottom: 20px;
   right: 20px;
   z-index: 10;
-  width: 30px;
-  height: 30px;
-  // text-align: center;
-  // line-height: 30px;
-  background: #f5f5f5;
-  color: #444;
+  width: 60px;
+  height: 60px;
   cursor: pointer;
   border-radius: 35px;
   display: none;
-
-  background: rgb(0, 0, 0);
   background: rgba(0, 0, 0, 0.7);
   transition: all 0.3s ease;
 }
 
-.back_to_top_arrow {
-  color: #fff;
-  margin: 0;
-  position: relative;
-  left: 16px;
-  top: 13px;
-  font-size: 19px;
-  transition: all 0.3s ease;
-}
-
-.back_to_top_arrow::after {
+.back_to_top::after {
   background-image: url(../img/up-arrow-angle.svg);
   background-position: center;
   background-size: cover;
   content: '';
-  width: 20px;
+  width: 17px;
+  height: 17px;
+  display: block;
+  position: relative;
+  top: 18px;
+  left: 21px;
 }
 
 .back_to_top:hover {
-  background: #e9ebec;
   background: rgba(0, 0, 0, 0.9);
-}
-
-.back_to_top_arrow:hover {
-  color: #fff;
-  top: 5px;
+  transition: all 0.3s ease;
+  & ::after {
+    top: 15px;
+  }
 }
 
 .back_to_top-show {
