add to local storage

--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,7 +1,7 @@
 <nav class="nav__film">
   <a class="nav__main" data-type="movie" href="#">MOVIES</a>
   <a class="nav__main" data-type="tv" href="#">TV SERIES</a>
-  <a class="nav__main" data-type="favotite" href="#">FAVORITES</a>
+  <a class="nav__main" data-type="favorite" href="#">FAVORITES</a>
 </nav>
 <section class="sort container">
   <h2 class="sort__text">Сategories</h2>
