--- a/src/page-index/page.scss
+++ b/src/page-index/page.scss
@@ -75,7 +75,9 @@ body {
     height: 19px;
   }
 }
-
+.svg-star-green {
+  fill:#77C1BB;
+}
 .svg-star {
   position: absolute;
   top: 15%;
@@ -84,7 +86,6 @@ body {
   height: 17px;
   fill: #fff;
   cursor: pointer;
-
   &:hover {
     width: 23px;
     height: 20px;
