--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-<li class="movie" data-id="{{id}}">
+<li class="movie">
   <img class="movie-logo" src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" alt="movie-title">
   <p class="movie-title">
     {{#if title}}
@@ -12,7 +12,7 @@
     <use class="subscription_Bell" href="../img/sprite.svg#bell"></use>
   </svg>
   <svg class="svg-star">
-    <use href="../img/sprite.svg#star-full"></use>
+    <use class="use" data-id="{{id}}" href="../img/sprite.svg#star-full"></use>
   </svg>
 </li>
 {{/each}}
