add fonts and fixed problems with hover

--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,5 +1,4 @@
 .nav__film {
-//   max-width: 200px;
   margin: 0;
   padding: 0;
   display: flex;
@@ -14,7 +13,8 @@ width: 100px;
 height: 12px;
 text-align: center;
 color: #372c48;
-font-weight: 500;
+font-family: 'Lato';
+font-weight: 700;
 line-height: 12px;
 letter-spacing: 0.14px;
 font-size: 14px;
