--- a/src/page-index/page.scss
+++ b/src/page-index/page.scss
@@ -36,7 +36,7 @@ body {
   background-image: url('../img/shadow.png');
   display: block;
   width: 346px;
-  height: 177px;
+  height: 178px;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -53,10 +53,11 @@ body {
 
 .movie-title {
   margin: 0;
-  font-size: 16px;
+  font-family: 'Lato';
+  font-size: 14px;
   color: #fff;
   position: absolute;
-  top: 79%;
+  top: 88%;
   left: 4%;
 }
 
@@ -70,8 +71,9 @@ body {
   cursor: pointer;
 
   &:hover {
-    width: 20px;
-    height: 19px;
+    -webkit-transform: scale(1.4);
+    -ms-transform: scale(1.4);
+    transform: scale(1.4);
   }
 }
 
@@ -85,9 +87,16 @@ body {
   cursor: pointer;
 
   &:hover {
-    width: 23px;
-    height: 20px;
+    -webkit-transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    transform: scale(1.5);
   }
+}
+.average{
+  color: #fff;
+  position: absolute;
+  left: 18px;
+  top: -8px;
 }
 .burger__button{
   border-style: none;
@@ -138,8 +147,20 @@ body {
  }
  .burger__span{
    padding-top: 5px;
+   font-family: 'Lato';
+  //  font-weight: 600;
  }
  .shadow__box{
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 57px;
+  z-index: -4;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(191, 191, 191, 0);
+ }
+ .shadow__box__active{
   padding: 0;
   margin: 0;
   position: absolute;
@@ -180,7 +201,6 @@ body {
     top: 0;
     left: 0;
   }
-
   .movie::before {
     content: "";
     background-image: url('../img/shadow.png');
@@ -206,6 +226,7 @@ body {
       left: 4%;
     }
   }
+
 }
   @media (min-width:1023px) {
     .gallery {
@@ -223,14 +244,14 @@ body {
       display: block;
       background-size: cover;
       width: 481px;
-      height: 248px;
+      height: 251px;
       position: absolute;
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
     }
     .movie-title {
-      top: 88%;
+      top: 90%;
       left: 4%;
     }
 
