--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -14,5 +14,6 @@
   <svg class="svg-star">
     <use href="../img/sprite.svg#star-full"></use>
   </svg>
+  <p class="average">{{vote_average}}</p>
 </li>
 {{/each}}
