--- a/src/scss/subscription.scss
+++ b/src/scss/subscription.scss
@@ -19,6 +19,7 @@
   top: 50%;
   left: 50%;
   transition: all 0.25s ease-in-out;
+  font-family: 'Lato';
 }
 
 .subscription_container {
@@ -46,7 +47,8 @@
   border-bottom: 2px solid grey;
   background-color: transparent;
   color: grey;
-  font-size: 16pt;
+  font-size: 14pt;
+  font-family: 'Lato';
   outline: none;
   margin-top: 16px;
   cursor: text;
