--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,6 +18,16 @@
       <svg class="search-svg">
         <use href="../img/symbol-defs.svg#icon-search"></use>
       </svg>
+      <form class="headerSearch">
+          <input class="headerSearch_iteam_btn_submit" type="submit" value=" " />
+          <input
+            name="film"
+            class="headerSearch_iteam_btn_search"
+            type="text"
+            placeholder="Search"
+            autocomplete="off"
+          />
+        </form>
       <div class="lightbox">
         <div class="lightbox_iteam">
           <p class="lightbox_iteam_text">Mooogle</p>
@@ -29,11 +39,12 @@
             class="lightbox_iteam_btn_search"
             type="text"
             placeholder="Search"
+            autocomplete="off"
           />
         </form>
       </div>
       <div class="lightbox_shadow"></div>
-      <span class="span__text">Search</span>
+      <!-- <span class="span__text">Search</span> -->
     </a>
   </nav>
 </header>
