--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,11 +1,15 @@
 body {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
- }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: space-between;
+  min-height: 100vh;
+}
 
- img {
-   display: block;
-   width: 100%;
-   height: auto;
- }
+img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
