--- a/src/partials/popular.hbs
+++ b/src/partials/popular.hbs
@@ -1,18 +1,20 @@
 {{#each this}}
 <li class="movie" data-id="{{id}}">
-  <img class="movie-logo" src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" alt="movie-title">
-  <p class="movie-title">
-    {{#if title}}
-    {{title }} {{release_date}}
-  {{else}}
-    {{name }} {{first_air_date}}
-  {{/if}}
+  <a href="../about.html">
+    <img class="movie-logo" src="https://image.tmdb.org/t/p/w500{{backdrop_path}}" alt="movie-title">
+    <p class="movie-title">
+      {{#if title}}
+      {{title }} {{release_date}}
+      {{else}}
+      {{name }} {{first_air_date}}
+      {{/if}}
     </p>
-  <svg class="svg-bell">
-    <use class="subscription_Bell" href="../img/sprite.svg#bell"></use>
-  </svg>
-  <svg class="svg-star">
-    <use href="../img/sprite.svg#star-full"></use>
-  </svg>
+    <svg class="svg-bell">
+      <use class="subscription_Bell" href="../img/sprite.svg#bell"></use>
+    </svg>
+    <svg class="svg-star">
+      <use href="../img/sprite.svg#star-full"></use>
+    </svg>
+  </a>
 </li>
 {{/each}}
