--- a/src/page-index/page.scss
+++ b/src/page-index/page.scss
@@ -179,6 +179,10 @@ body {
     margin: 0 auto;
   }
 
+  .shadow__box {
+    display: none;
+   }
+
   .movie-logo {
     width: 353px;
     height: 177px;
