--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container fix_bag_height">
     <div class="burger__menu">
         <li class="burger__list burger__search__films">
             <svg class="burger__svg">
