--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,17 +1,17 @@
 <section class="page-about">
-  <div class="movieListInfo"></div>
+  <div class = "movieListInfo"></div>
 
   <div class="trailer-media">
     <div class="film-trailer">
       <h2 class="subtitle">Trailer</h2>
       <iframe
         class="iframe_trailer"
-        width="720"
-        height="435"
+        width="330"
+        height="200"
         src=""
         frameborder="0"
-        encrypted-media
-        picture-in-picture
+        encrypted-media;
+        picture-in-picture;
         allowfullscreen
       ></iframe>
     </div>
